# SWL

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  compile_commands.json
.cache/CPM/fmt/: 6df8.hash
.cache/CPM/freetype/: 82b8.hash
.cache/CPM/lua/: 3511.hash
.cache/CPM/sdl/: 1b4d.hash
.cache/CPM/sdl3_ttf/: 96b6.hash
.cache/CPM/sdl_image/: 25f5.hash
.cache/CPM/sol2/: bb71.hash
.cache/CPM/swgtk/: 4dee.hash
.cache/clangd/index/: App.cpp.2FDD8B58A5B25031.idx  App.hpp.3C4BB1A9214685B0.idx  D3D11_PixelShader_Advanced.h.FDA4B83623E5AAD6.idx  D3D11_PixelShader_Colors.h.865DE1190A65240E.idx  D3D11_PixelShader_Textures.h.F24B2299C57DFF62.idx  D3D11_VertexShader.h.5DD3E36B2AC9025C.idx  D3D12_Blit.h.0D838427EA504FD5.idx  D3D12_PixelShader_Advanced.h.5B01F341441717FE.idx  D3D12_PixelShader_Colors.h.2A666E4218BD1CC5.idx  D3D12_PixelShader_Textures.h.75A410635326238E.idx  D3D12_RootSig_Advanced.h.D8D1709206F52BDE.idx  D3D12_RootSig_Color.h.123D0EB3716BFCA8.idx  D3D12_RootSig_Texture.h.BE2987E8C62E3F99.idx  D3D12_VertexShader_Advanced.h.A4BEAC9AEE8B0FFE.idx  D3D12_VertexShader_Color.h.106184E5CDB86452.idx  D3D12_VertexShader_Texture.h.6B65F1DC52C3C5C8.idx  D3D9_PixelShader_YUV.h.64E8B7CACCAA761C.idx  FontGroup.cpp.59A080CEA48B20B6.idx  FontGroup.hpp.E6AAF1D605AEA4F7.idx  IMG.c.B4AEAF6322A6A175.idx  IMG_WIC.c.0232CA5F334CB428.idx  IMG_avif.c.602EAEFAC15DB739.idx  IMG_bmp.c.3EFD68F76A33B2C2.idx  IMG_gif.c.B02B13D935850F0C.idx  IMG_jpg.c.97423AD259094781.idx  IMG_jxl.c.7A96A07812C481E5.idx  IMG_lbm.c.506F080DA60CC6EA.idx  IMG_pcx.c.02F547E3D290D604.idx  IMG_png.c.E1D241792FE5194C.idx  IMG_pnm.c.F585EF3C83F2B016.idx  IMG_qoi.c.6BDB0D81D9543978.idx  IMG_stb.c.9466C7FCBA00A783.idx  IMG_svg.c.72F41BCCAF6245BA.idx  IMG_tga.c.A7896BA7F00BEE14.idx  IMG_tif.c.E25926673B1FE252.idx  IMG_webp.c.D17BCF12DB9663B7.idx  IMG_xcf.c.D9534F158C3504E4.idx  IMG_xpm.c.6D05EB4EDDD6AF98.idx  IMG_xv.c.82C89672DE95E020.idx  Input.hpp.883E2D0881F40C7F.idx  (+1186 more)
cmake/: Config.cmake  GNUOptions.cmake  MSVCOptions.cmake
examples/: CMakeLists.txt  Text.lua
swl/: CMakeLists.txt  LuaGame.cpp  LuaGame.hpp  common.hpp  engine.lua  swl2d.cpp
